--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -17,7 +17,7 @@
     <meta name="description" content="Tenguu Cinema - Movie Theater Template">
     <meta name="author" content="Themeton">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" th:href="@{/images/favicon.png}"/>
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/images/movieLogo.jpg}"/>
 
     <!-- Google Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
