20241105 - 어드민 페이지 권한 추가 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -555,7 +555,7 @@
                     <span>Seat: </span>
                     <ul id="selected-seats"></ul>
                     <div>Tickets: <span id="counter">0</span></div>
-                    <div>Total: <b>$<span id="total">0</span></b></div>
+                    <div>Total: <b><span id="total">0</span> 원</b></div>
                 </div>
                 <a href="javascript:" class="close-window"><i class="fa fa-times"></i></a>
             </div>
