20241115 2018 - 이미지 uuid 추가

--- a/src/main/resources/templates/admin/movie/list.html
+++ b/src/main/resources/templates/admin/movie/list.html
@@ -877,12 +877,12 @@
                                 {type: 'text', title: 'Director', width: 100},
                                 {type: 'text', title: 'Actors', width: 100},
                                 {
-                                    type: 'image',
+                                    type: 'text',
                                     title: 'Length Poster',
                                     width: 100
                                 },
                                 {
-                                    type: 'image',
+                                    type: 'text',
                                     title: 'Width Poster',
                                     width: 100
                                 },
