241118 1816 "order 수정 중, 좌석 api 작성 + 프론트에서 요청 함수 작성"

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -80,7 +80,7 @@
 
 <footer class="footer footer-alt fw-medium">
         <span class="text-dark">
-            <script>document.write(new Date().getFullYear())</script> © Velonic - Theme by Techzaa
+            <script>document.write(new Date().getFullYear())</script>
         </span>
 </footer>
 
