--- a/src/main/resources/templates/admin/schedule/list.html
+++ b/src/main/resources/templates/admin/schedule/list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{/admin/head :: headContent}"></head>
+<head th:replace="~{admin/head :: headContent}"></head>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jspreadsheet-ce/dist/jspreadsheet.min.css" type="text/css" />
 <!-- App favicon -->
 <link rel="shortcut icon" th:href="@{/images/movieLogo.jpg}">
